# video-streaming

./: .gitignore  README.md  architecture.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.js
client/src/: app.html
client/src/lib/: Upload.svelte  VideoPlayer.svelte
client/src/routes/: +page.svelte
client/src/routes/v/[token]/: +page.svelte
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile
server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
server/src/db/: mod.rs  video.rs
server/src/db/migrations/: 001_create_videos.sql  002_create_transcode_jobs.sql
server/src/handlers/: mod.rs  stream.rs  upload.rs  video.rs
server/src/models/: video.rs
server/src/storage/: mod.rs
server/src/worker/: main.rs  mod.rs  transcode.rs
