[package]
name = "video-streaming"
version = "0.1.0"
edition = "2021"

[lib]
name = "video_streaming"
path = "src/lib.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"

[[bin]]
name = "transcode-worker"
path = "src/bin/transcode_worker.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
redis = { version = "0.27", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
infer = "0.16"
dotenvy = "0.15"
thiserror = "2"
tokio-stream = "0.1"
async-stream = "0.3"
